--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,7 @@ iOSInjectionProject/
 ### SwiftPackageManager ###
 Packages
 xcuserdata
-*.xcodeproj
+#*.xcodeproj
 
 ### Windows ###
 # Windows thumbnail cache files
